2006-xxxx
	* Fixed an error if enable_syslog and drop_spam is set. We get
	  an exception in the syslog if we use sys.exit(0), replaced by
	  return.

	* run_email2trac.c. Setgid() must be called before setuid().
	  Reported by:  Anonymous
	  Fixed    by:  Bas van der Vlies
	
2006-10-10
	* Fixed race conditions in delete_spam.py and added some 
	  debug code.
	  Fixed by   : Bas van der Vlies

	* Added author and description field when attachment is
	  added to ticket. This is for trac version greater than
	  0.8.
	  Fixed by   : Bas van der Vlies
	  Thanks to Matthew Good for the hint

	* Added drop_spam option, default = 0. If set then
	  mail marked as Spam is not accepted.
	  Added by   : Bas van der Vlies

	* Do not send notification if message is marked as Spam 
	  and drop_spam is not set.
	  Fixed by   : Bas van der Vlies

2006-10-02
	* Fixes possible segmentation faults in run_email2trac.c 
	  Reported by: bcornec
	  Fixed by   : Bas van der Vlies

	* Can set DEBUG level while configuring package, eg:
	  DEBUG=1 ./configure ( default : 0)
	  Reported by: syd at plug dot ca
	  Fixed By   : Bas van der Vlies

	* delete_spam.py did not delete everything from the SQL tables
	  Reported by: brent at rcfile dot org
	  Fixed by   : Bas van der Vlies

	* Do not send notification when message is marked as Spam
	  Fixed by   : Bas van der Vlies
	  
2006-08-28
	* fixes an error in the 'reply_all' setting
	  Thanks to and Patch by: ncarlson@ibsys.com

	* Added RPM spec file 
	  Thanks to:  Jon Topper <jon@topper.me.uk>

2006-07-14
	* Use X11R5 install-sh to install email2trac components to hide
          native install program differences.
	  Author: Michel Jouvin <jouvin@lal.in2p3.fr>

	* Fixed an error in saving attachments for new tickets for trac 
	  versions greater then 0.9.
	  Fixed by: Bas van der Vlies

	* When something went wrong save the offending email for debug
	  purposes.
	  Fixed by: Bas van der Vlies

	* delete_spam.py 